--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -6,6 +6,7 @@ body {
 
 input, select {
     transition: all 0.5s;
+
 }
 
 input::placeholder {
@@ -14,6 +15,20 @@ input::placeholder {
 
 input:hover, select:hover {
     box-shadow: 1px 1px 10px 3px rgba(216, 27, 53, 0.705);
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-text-fill-color: #fff;
+  -webkit-box-shadow:  #363b3e00 inset;
+  transition: background-color 5000s ease-in-out 0s;
 }
 
 .container {
